--- a/image_recognizer/image_recognizer.ipynb
+++ b/image_recognizer/image_recognizer.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Digit Recognizer\n",
+    "\n",
+    "https://www.kaggle.com/c/digit-recognizer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -14,15 +23,20 @@
     "from pprint import pprint\n",
     "import pandas as pd\n",
     "\n",
+    "# validation\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_test = pd.read_csv(\"data/digits_test.csv\")\n",
@@ -33,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -62,13 +76,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = [i[1:] for i in digits_train]\n",
+    "y = [i[0] for i in digits_train]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x135f55780>"
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape=None, degree=2, gamma='auto', kernel='poly',\n",
+       "  max_iter=-1, probability=True, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# probability=True to use method predict_proba\n",
+    "svc = SVC(kernel=\"poly\", degree=2, probability=True)\n",
+    "svc.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10d26fe10>"
       ]
      },
      "metadata": {},
@@ -76,9 +132,9 @@
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQQAAAECCAYAAAAYUakXAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADgNJREFUeJzt3W+oVfWex/HPZ64ZYRFKJUeraSbrwc2YmsSGEkkuU40Q\n1ZOwRw490OQWGkNNSFJE0WWyZuZBCN6yHPA2BV1LLkPdkEqHoDT7o+XcW4ZR4h9C1LJsKL/z4Cy/\nneme89v7nP1nrXN9v+Bw9l7fvff6utQPv7XWb6/liBAASNJf1N0AgOYgEAAkAgFAIhAAJAIBQCIQ\nAKRaAsH29bb/YPsT2/fW0UOJ7d22t9t+z/bWBvSzxvYB2zuGLJti+1XbH1e/Jzesvwds76m24Xu2\n59fY33m2X7P9ke0PbS+tljdiGxb66/s2dL/nIdj+maQ/Svp7SV9I2iLp1oj4qK+NFNjeLWlWRHxZ\ndy+SZHuupK8l/UdEzKyW/YukgxHxqypUJ0fEPzeovwckfR0RK+voaSjbA5IGImKb7TMkvSPpJkn/\nqAZsw0J/t6jP27COEcJsSZ9ExKcR8b+S/lPSjTX0MW5ExCZJB3+y+EZJa6vHazX4D6gWI/TXGBGx\nNyK2VY+/krRT0nQ1ZBsW+uu7OgJhuqTPhzz/QjX94QtC0u9tv2N7Ud3NjGBqROytHu+TNLXOZkZw\nh+0Pql2K2nZphrJ9gaTLJb2lBm7Dn/Qn9XkbclBxeHMi4m8l/YOkX1ZD4saKwf2+ps1BXyXpQkmX\nSdor6bF625Fsny7pBUnLIuLI0FoTtuEw/fV9G9YRCHsknTfk+bnVssaIiD3V7wOS1mtwN6dp9lf7\nnif2QQ/U3M//ExH7I+KHiDgu6deqeRvaPkWD/9nWRcRvq8WN2YbD9VfHNqwjELZIusj2X9meKGmB\npA019DEs25OqAzuyPUnStZJ2lN9Viw2SFlaPF0p6qcZe/sSJ/2iVm1XjNrRtSU9J2hkRjw8pNWIb\njtRfHduw72cZJKk6ffJvkn4maU1EPNz3JkZg+681OCqQpAmSflN3f7aflXSNpLMk7Zd0v6QXJT0v\n6XxJn0m6JSJqObA3Qn/XaHCoG5J2S1o8ZH+93/3NkbRZ0nZJx6vFyzW4n177Niz0d6v6vA1rCQQA\nzcRBRQCJQACQCAQAiUAAkAgEAKnWQGjwtGBJ9NepJvfX5N6k+vqre4TQ6L8U0V+nmtxfk3uTauqv\n7kAA0CAdTUyyfb2kf9fgjMMnI+JXLV7PLCigJhHhVq8ZcyCM5UInBAJQn3YCoZNdBi50AvyZ6SQQ\nxsOFTgCMwoRer6A6fdL0I7oA1FkgtHWhk4hYLWm1xDEEoOk62WVo9IVOAIzemEcIEfG97TskvaIf\nL3TyYdc6A9B3fb1ACrsMQH16fdoRwJ8ZAgFAIhAAJAIBQCIQACQCAUDq+dRldM+MGTOK9aVLl3b0\n+bfddlux/uSTT/Z0/agfIwQAiUAAkAgEAIlAAJAIBACJQACQCAQAia8/N8g555xTrG/ZsqVYP/fc\nc4v1Tv+uDx8+XKxfccUVxfru3bs7Wj86w9efAYwKgQAgEQgAEoEAIBEIABKBACARCAAS10NokFbn\n8adP7+zWmYcOHSrW33333WL9qquuKtaffvrpYn3evHnFOurHCAFAIhAAJAIBQCIQACQCAUAiEAAk\nAgFAYh5CH02cOLFYv/vuuzv6/PXr1xfrS5YsKdZbXe/g5ZdfLtbnzp1brM+cObNY37FjR7GO3uso\nEGzvlvSVpB8kfR8Rs7rRFIB6dGOEMC8ivuzC5wCoGccQAKROAyEk/d72O7YXdaMhAPXpdJdhTkTs\nsX2OpFdt/09EbBr6giooCAtgHOhohBARe6rfByStlzR7mNesjohZHHAEmm/MgWB7ku0zTjyWdK0k\nzhsB41gnuwxTJa23feJzfhMR5RPVJ7nbb7+9WG91Hn/FihXF+iOPPDLqnoaaMKH8z+HYsWMdfT6a\nb8yBEBGfSvqbLvYCoGacdgSQCAQAiUAAkAgEAIlAAJAIBADJEdG/ldn9W1kDnXbaacX6tGnTivVd\nu3Z1s51Ru+6664r1NWvWFOubN28u1hcsWDDqntC+iHCr1zBCAJAIBACJQACQCAQAiUAAkAgEAIlA\nAJCYh4Cu2b59e0fvv/TSS7vUCYbDPAQAo0IgAEgEAoBEIABIBAKARCAASAQCgNSNuz/jJHH11VcX\n6xdffHGxvm7dum62gx5ghAAgEQgAEoEAIBEIABKBACARCAASgQAgMQ8BbTt69Gix/t133xXre/bs\n6WY76IGWIwTba2wfsL1jyLIptl+1/XH1e3Jv2wTQD+3sMjwj6fqfLLtX0saIuEjSxuo5gHGuZSBE\nxCZJB3+y+EZJa6vHayXd1OW+ANRgrAcVp0bE3urxPklTu9QPgBp1fFAxIqJ08VTbiyQt6nQ9AHpv\nrCOE/bYHJKn6fWCkF0bE6oiYFRGzxrguAH0y1kDYIGlh9XihpJe60w6AOrW8L4PtZyVdI+ksSfsl\n3S/pRUnPSzpf0meSbomInx54HO6zuC/DODZ79uxi/fXXXy/Wd+3aVaxzX4beaue+DC2PIUTErSOU\nfjHqjgA0GlOXASQCAUAiEAAkAgFAIhAAJAIBQOJ6CGjblVdeWayfeuqpxfqLL77YzXbQA4wQACQC\nAUAiEAAkAgFAIhAAJAIBQCIQACTmIaBt33zzTbG+cuXKYn3FihXdbAc9wAgBQCIQACQCAUAiEAAk\nAgFAIhAAJAIBQGIeQoNMnDixWO/0egOXXHJJsb5q1aqO3v/cc88V62g+RggAEoEAIBEIABKBACAR\nCAASgQAgEQgAkiOifyuz+7eyHpg0aVKxvmDBgmL92muvLdbPPvvsYn369OnF+owZM4r1Tv+u33//\n/WJ97ty5xfrRo0c7Wj86ExFu9ZqWIwTba2wfsL1jyLIHbO+x/V71M7/TZgHUr51dhmckXT/M8n+N\niMuqn//qblsA6tAyECJik6SDfegFQM06Oah4h+0Pql2KyV3rCEBtxhoIqyRdKOkySXslPTbSC20v\nsr3V9tYxrgtAn4wpECJif0T8EBHHJf1a0uzCa1dHxKyImDXWJgH0x5gCwfbAkKc3S9ox0msBjB8t\n5yHYflbSNZLOkrRf0v3V88skhaTdkhZHxN6WKxvn8xAefPDBYn358uV96mR4dvk0c6/nnGzYsKFY\n37hxY7H+ySefFOuvvPLKqHvCj9qZh9DyAikRceswi58aU0cAGo2pywASgQAgEQgAEoEAIBEIABKB\nACBxPYRReOONN4r1OXPm9KmT4fV6HsIXX3xRrE+YUD6LPW3atGL9+PHjxfqWLVuK9SlTphTr3377\nbbG+adOmYr2VY8eOFetPPPFEsX7kyJFi/eDBzr5j2JXrIQA4eRAIABKBACARCAASgQAgEQgAEoEA\nIDEPYRTuuuuuYv3RRx/tUyfDazUP4fPPPy/WFy9eXKxv27atWJ84cWKxft999xXrb7/9drHe6jx+\nq/W30ut5HIcPHy7Wb7jhhmL9zTff7Gj9zEMAMCoEAoBEIABIBAKARCAASAQCgEQgAEgtL8OOH7X6\nPn+vtfo+/7p164r1e+65p1hv9X38Ti1ZsqSj93/66afF+qFDh4r1hx56qFifP3/+qHsajTPPPLNY\nf/jhh4v1efPmdbOdYTFCAJAIBACJQACQCAQAiUAAkAgEAIlAAJCYhzAKnV4Xv1PPPPNMsX7nnXf2\np5GatLovRivLli0r1teuXVusz5gxo1gfGBgo1mfOnFmsN0HLEYLt82y/Zvsj2x/aXlotn2L7Vdsf\nV78n975dAL3Uzi7D95L+KSJ+LunvJP3S9s8l3StpY0RcJGlj9RzAONYyECJib0Rsqx5/JWmnpOmS\nbpR0Yoy1VtJNvWoSQH+M6qCi7QskXS7pLUlTI2JvVdonaWpXOwPQd20fVLR9uqQXJC2LiCNDL0gZ\nETHSBVRtL5K0qNNGAfReWyME26doMAzWRcRvq8X7bQ9U9QFJB4Z7b0SsjohZETGrGw0D6J12zjJY\n0lOSdkbE40NKGyQtrB4vlPRS99sD0E8t78tge46kzZK2SzpeLV6uweMIz0s6X9Jnkm6JiOKJ+vF+\nX4ZW55mXL19erLe6nkGreQat5kHs27evWMfJrZ37MrQ8hhAR/y1ppA/6xWibAtBcTF0GkAgEAIlA\nAJAIBACJQACQCAQAqeU8hK6ubJzPQwDGs3bmITBCAJAIBACJQACQCAQAiUAAkAgEAIlAAJAIBACJ\nQACQCAQAiUAAkAgEAIlAAJAIBACJQACQCAQAiUAAkAgEAIlAAJAIBACJQACQCAQAiUAAkFoGgu3z\nbL9m+yPbH9peWi1/wPYe2+9VP/N73y6AXmp5oxbbA5IGImKb7TMkvSPpJkm3SPo6Ila2vTJu1ALU\npp0btUxo40P2StpbPf7K9k5J0ztvD0DTjOoYgu0LJF0u6a1q0R22P7C9xvbkLvcGoM/aDgTbp0t6\nQdKyiDgiaZWkCyVdpsERxGMjvG+R7a22t3ahXwA91NbNXm2fIul3kl6JiMeHqV8g6XcRMbPF53AM\nAahJV272atuSnpK0c2gYVAcbT7hZ0o6xNAmgOdo5yzBH0mZJ2yUdrxYvl3SrBncXQtJuSYurA5Cl\nz2KEANSknRFCW7sM3UIgAPXpyi4DgJMHgQAgEQgAEoEAIBEIABKBACARCAASgQAgEQgAEoEAIBEI\nABKBACARCAASgQAgEQgAUsurLnfZl5I+G/L8rGpZU9FfZ5rcX5N7k7rf31+286K+XiDlT1Zub42I\nWbU10AL9dabJ/TW5N6m+/thlAJAIBACp7kBYXfP6W6G/zjS5vyb3JtXUX63HEAA0S90jBAANQiAA\nSAQCgEQgAEgEAoD0fziNMS63by0tAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQQAAAECCAYAAAAYUakXAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADgpJREFUeJzt3W+oVfWex/HPJ2sK8hBKjRwanWZMCInS6ZAD1dBwmYv2\nxIIQe3DxQow+sLrCrSZ6UhBDOvRnLhHCcZTrhW6DmP0hLnVTLtUliLTEvzXqoE121FJIg6TS7zw4\ny2+nrue3zzl7n72W+n6BnH3Wd++9vmepH9Zv7d/5LUeEAECSLqq7AQDNQSAASAQCgEQgAEgEAoBE\nIABItQSC7bm2P7G91/YjdfRQYnu/7e22t9re3IB+1tg+YnvHkG2Tbb9le0/1dVLD+nvc9sHqGG61\nfUeN/U21/Sfbu2zvtP2ransjjmGhv64fQ3d7HoLtCZL+R9K/SPpM0geS7omIXV1tpMD2fkl9EfFl\n3b1Iku1/kvS1pN9FxPXVtv+QdCwillehOiki/q1B/T0u6euIeKqOnoay3SupNyI+tN0jaYukOyX9\nUg04hoX+FqjLx7COM4SbJe2NiP+NiG8l/bek+TX0cc6IiHckHfvJ5vmS1laP12rwH1AthumvMSJi\nICI+rB6fkLRb0tVqyDEs9Nd1dQTC1ZL+b8j3n6mmH74gJP3R9hbbi+tuZhhTImKgenxI0pQ6mxnG\nfba3VUOK2oY0Q9m+RtJsSe+rgcfwJ/1JXT6GXFQ8u1sj4h8kzZO0tDolbqwYHPc1bQ76SknTJc2S\nNCDp6XrbkWxPlPSSpGURcXxorQnH8Cz9df0Y1hEIByVNHfL931TbGiMiDlZfj0h6WYPDnKY5XI09\nz4xBj9Tcz49ExOGIOBURpyWtUs3H0PYlGvzP9kJEbKg2N+YYnq2/Oo5hHYHwgaQZtv/O9l9JWijp\ntRr6OCvbl1cXdmT7ckk/l7Sj/KpavCZpUfV4kaRXa+zlL5z5j1a5SzUeQ9uWtFrS7oh4ZkipEcdw\nuP7qOIZd/5RBkqqPT/5T0gRJayLi37vexDBs/70Gzwok6WJJv6+7P9svSrpd0pWSDkt6TNIrktZJ\nmibpgKQFEVHLhb1h+rtdg6e6IWm/pCVDxuvd7u9WSe9K2i7pdLX5UQ2O02s/hoX+7lGXj2EtgQCg\nmbioCCARCAASgQAgEQgAEoEAINUaCA2eFiyJ/trV5P6a3JtUX391nyE0+i9F9NeuJvfX5N6kmvqr\nOxAANEhbE5Nsz5X0Gw3OOPyviFje4vnMggJqEhFu9ZwxB8JYFjohEID6jCQQ2hkysNAJcJ5pJxDO\nhYVOAIzCxeO9g+rjk6Zf0QWg9gJhRAudRES/pH6JawhA07UzZGj0QicARm/MZwgR8b3t+yS9qR8W\nOtnZsc4AdF1XF0hhyADUZ7w/dgRwniEQACQCAUAiEAAkAgFAIhAAJAIBQCIQACQCAUAiEAAkAgFA\nIhAAJAIBQCIQACQCAUAiEAAkAgFAIhAAJAIBQCIQACQCAUAiEAAkAgFAIhAAJAIBQCIQACQCAUAi\nEAAkAgFAIhAAJAIBQLq4nRfb3i/phKRTkr6PiL5ONAWgHm0FQuWfI+LLDrwPgJoxZACQ2g2EkPRH\n21tsL+5EQwDq0+6Q4daIOGj7ryW9ZfvjiHhn6BOqoCAsgHOAI6Izb2Q/LunriHiq8JzO7AzAqEWE\nWz1nzEMG25fb7jnzWNLPJe0Y6/sBqF87Q4Ypkl62feZ9fh8Rb3SkKwC16NiQYUQ7Y8gA1GZchwwA\nzj8EAoBEIABIBAKARCAASAQCgNSJ33a8YMybN69YX7lyZbE+bdq0tva/Zs2atl6/adOmYv3TTz8t\n1rdv316sHz9+fNQ9oVk4QwCQCAQAiUAAkAgEAIlAAJAIBACJQACQ+PXnUXj44YeL9SeffLJYP3Xq\nVLH+zTffFOs9PT3F+nj/Xbaap3Dy5Mlifdu2bcX6ihUrivWtW7cW66dPny7WL3T8+jOAUSEQACQC\nAUAiEAAkAgFAIhAAJAIBQGI9hFGYOnVqW69vtR7BkiVLivVZs2YV6zNmzCjWW63H0O7PN3v27GL9\n7rvvbqv+xhvl23688sorxfqqVauKdXCGAGAIAgFAIhAAJAIBQCIQACQCAUAiEAAk5iEMceONNxbr\nCxcubOv9W60n0G69btOnTy/Wr7/++mL9wQcfLNbnzp3bVv2mm24q1h944IFi/dtvvy3WzwctzxBs\nr7F9xPaOIdsm237L9p7q66TxbRNAN4xkyPBbST+N3kckbYqIGZI2Vd8DOMe1DISIeEfSsZ9sni9p\nbfV4raQ7O9wXgBqM9aLilIgYqB4fkjSlQ/0AqFHbFxUjIkqLp9peLGlxu/sBMP7GeoZw2HavJFVf\njwz3xIjoj4i+iOgb474AdMlYA+E1SYuqx4skvdqZdgDUqeWQwfaLkm6XdKXtzyQ9Jmm5pHW275V0\nQNKC8WyyW+6///5iffLkyW29/969e9t6fdPt27evrfq7775brM+ZM6dYX716dbG+eHF55PrJJ58U\n688++2yxfj5oGQgRcc8wpZ91uBcANWPqMoBEIABIBAKARCAASAQCgEQgAEishzAKtov1o0ePFuv9\n/f2dbOe8c+zYT3+H7sfefvvtYv2LL74o1nt7e4v1PXv2FOsXAs4QACQCAUAiEAAkAgFAIhAAJAIB\nQCIQACTmIQzx0UcfFeutPud+7rnnivWvvvpq1D3hB88//3yx3uq+D+vXry/WN23aVKxfeumlxXpP\nT0+x3urv/7vvvivWu4EzBACJQACQCAQAiUAAkAgEAIlAAJAIBADJEcPeha3zOyvc8g3tu/baa4v1\nefPmFesnT54s1u+4445ivdV6Ee3+W5s5c2ax3urnb9Vfq3kIEydOLNZvvvnmYv22224r1t97771i\nvV0RUT4A4gwBwBAEAoBEIABIBAKARCAASAQCgEQgAEjMQziPtFrP4YYbbhjX/R86dKhYnzBhQrF+\n1VVXtbX/Dz74oFhftmxZsd7ufRlmzJhRrG/ZsqVYH+/1EDoyD8H2GttHbO8Ysu1x2wdtb63+lGes\nADgnjGTI8FtJc8+y/dmImFX9+UNn2wJQh5aBEBHvSCrfYwvAeaGdi4r32d5WDSkmdawjALUZayCs\nlDRd0ixJA5KeHu6Jthfb3mx78xj3BaBLxhQIEXE4Ik5FxGlJqyQN+2teEdEfEX0R0TfWJgF0x5gC\nwfbQ+2rfJWnHcM8FcO5oeV8G2y9Kul3SlbY/k/SYpNttz5IUkvZLWjKOPWKENm7cWKwfOXKkWN++\nfXuxvmHDhmJ93759xfoTTzxRrN97773Fequfb+nSpcX63r17i/V2HT16dFzfvxtaBkJE3HOWzavH\noRcANWPqMoBEIABIBAKARCAASAQCgEQgAEish4COueWWW4r1119/vVj//PPPi/VFixYV65s3Mzu+\nhPsyABgVAgFAIhAAJAIBQCIQACQCAUAiEAAk5iFgxC677LJifWBgoFi/+OLyb9vPmTOnWN+1a1ex\njjLmIQAYFQIBQCIQACQCAUAiEAAkAgFAIhAApJbLsOPC0dPTU6yvW7euWL/iiiuK9RUrVhTrzDOo\nH2cIABKBACARCAASgQAgEQgAEoEAIBEIABLrISBdd911xfrOnTuL9QMHDhTrfX19xfqxY8eKdbSn\nI+sh2J5q+0+2d9neaftX1fbJtt+yvaf6OqkTTQOoz0iGDN9L+nVEzJT0j5KW2p4p6RFJmyJihqRN\n1fcAzmEtAyEiBiLiw+rxCUm7JV0tab6ktdXT1kq6c7yaBNAdo7qoaPsaSbMlvS9pSkScWUTvkKQp\nHe0MQNeN+JebbE+U9JKkZRFx3P7h+kRExHAXDG0vlrS43UYBjL8RnSHYvkSDYfBCRGyoNh+23VvV\neyUdOdtrI6I/IvoionyJGUDtRvIpgyWtlrQ7Ip4ZUnpN0pn7cy+S9Grn2wPQTSMZMtwi6ReSttve\nWm17VNJySets3yvpgKQF49MiumXZsmVtvf6hhx4q1pln0HwtAyEi/ixpuAkNP+tsOwDqxNRlAIlA\nAJAIBACJQACQCAQAiUAAkFgP4QIyf/78Yv3ll18u1g8fPlys9/b2jrondE9H1kMAcOEgEAAkAgFA\nIhAAJAIBQCIQACQCAUAa8RJqaL6LLirn+8KFC4v1VnNSli9fPuqecG7hDAFAIhAAJAIBQCIQACQC\nAUAiEAAkAgFAYh7CeWTBgvKtMVrVT5w4Uay/+eabo+4J5xbOEAAkAgFAIhAAJAIBQCIQACQCAUAi\nEACklvMQbE+V9DtJUySFpP6I+I3txyX9q6Qvqqc+GhF/GK9G0dq0adPaev3BgweL9Y8//rit90fz\njWRi0veSfh0RH9rukbTF9ltV7dmIeGr82gPQTS0DISIGJA1Uj0/Y3i3p6vFuDED3jeoagu1rJM2W\n9H616T7b22yvsT2pw70B6LIRB4LtiZJekrQsIo5LWilpuqRZGjyDeHqY1y22vdn25g70C2AcjSgQ\nbF+iwTB4ISI2SFJEHI6IUxFxWtIqSTef7bUR0R8RfRHR16mmAYyPloFg25JWS9odEc8M2T70Vr93\nSdrR+fYAdNNIPmW4RdIvJG23vbXa9qike2zP0uBHkfslLRmXDgF0zUg+ZfizpLPdV545Bw2zbdu2\nYn3jxo3F+vr16zvZDs5BzFQEkAgEAIlAAJAIBACJQACQCAQAiUAAkBwR3duZ3b2dAfiRiDjbfKIf\n4QwBQCIQACQCAUAiEAAkAgFAIhAAJAIBQBrJAimd9KWkA0O+v7La1lT0154m99fk3qTO9/e3I3lS\nVycm/cXO7c1NXmuR/trT5P6a3JtUX38MGQAkAgFAqjsQ+mvefyv0154m99fk3qSa+qv1GgKAZqn7\nDAFAgxAIABKBACARCAASgQAg/T/2tjKYSShk6gAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x135f28be0>"
+       "<matplotlib.figure.Figure at 0x10d13c358>"
       ]
      },
      "metadata": {},
@@ -86,8 +142,83 @@
     }
    ],
    "source": [
-    "show_img(digits_test[55])\n",
-    "#save_img(digits_test[55])"
+    "# check model\n",
+    "print(*svc.predict([digits_test[121]]))\n",
+    "show_img(digits_test[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save result\n",
+    "output = svc.predict(digits_test).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_output = pd.DataFrame()\n",
+    "df_output[\"ImageId\"] = list(range(1, len(digits_test) + 1))\n",
+    "df_output[\"Label\"] = output\n",
+    "df_output.to_csv(\"data/output.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test with my custom imgs\n",
+    "test_img = Image.open('test_digit_8.png').convert('L')\n",
+    "#import PIL.ImageOps \n",
+    "#img11 = PIL.ImageOps.invert(img11)\n",
+    "test_img = test_img.resize((28, 28))\n",
+    "#test_img.save('test_img.png')\n",
+    "\n",
+    "test_img_ar = list(test_img.getdata())\n",
+    "svc.predict([test_img_ar])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.01788595  0.04479232  0.12878502  0.14206524  0.06573865  0.1933775\n",
+      "  0.02584292  0.02661402  0.32531601  0.02958238]\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!! in some cases algorithm is choosing wrong result but max probability is correct, lile with \n",
+    "pp = svc.predict_proba([test_img_ar])[0]\n",
+    "print(pp)\n",
+    "print(*np.where(pp==max(pp))[0])"
    ]
   },
   {
